--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -3,30 +3,26 @@ name: CI on Push and Pull Request
 on: [push, pull_request]
 
 jobs: 
-  build:
-    runs-on: ubuntu-latest
-    env:
-      config: 'Release'
-       
+  API:
+    runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 3.1.301
-    - name: Restore dependencies
+    - uses: actions/checkout@v1
+    - name: Android
       run: |
         cd ThePage
-        dotnet restore
-    - name: Build
-      run: |
-        cd ThePage
-        dotnet build --configuration $config --no-restore
-    - name: Test
-      run: |
-        cd ThePage
-        dotnet test --no-restore --no-build --configuration $config 
+        nuget restore
+        msbuild src/ThePage.Api/ThePage.Api.csproj /verbosity:normal /t:Rebuild /p:Configuration=Debug
   
+  Core:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: Android
+      run: |
+        cd ThePage
+        nuget restore
+        msbuild src/ThePage.Core/ThePage.Core.csproj /verbosity:normal /t:Rebuild /p:Configuration=Debu
+        
   Android:
     runs-on: macos-latest
     steps:
