Bumb version to 2.5

--- a/ThePage/src/ThePage.iOS/ThePage.iOS.csproj
+++ b/ThePage/src/ThePage.iOS/ThePage.iOS.csproj
@@ -9,6 +9,7 @@
     <RootNamespace>ThePage.iOS</RootNamespace>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
     <AssemblyName>ThePage.iOS</AssemblyName>
+    <ReleaseVersion>2.5</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
     <DebugSymbols>true</DebugSymbols>
