--- a/ThePage/src/ThePage.UnitTests/ThePage.UnitTests.csproj
+++ b/ThePage/src/ThePage.UnitTests/ThePage.UnitTests.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
 		<IsPackable>false</IsPackable>
+		<ReleaseVersion>2.5</ReleaseVersion>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
