--- a/.github/workflows/Execute-Unit-tests.yml
+++ b/.github/workflows/Execute-Unit-tests.yml
@@ -24,8 +24,8 @@ jobs:
     - name: Build
       run: |
         cd ThePage
-        dotnet build --no-restore
+        dotnet build --no-restore -c Unit-Test
     - name: Test
       run: |
         cd ThePage
-        dotnet test --no-build --verbosity normal
+        dotnet test --no-build --verbosity normal -c Unit-Test
