--- a/ThePage/src/ThePage.Api/ThePage.Api.csproj
+++ b/ThePage/src/ThePage.Api/ThePage.Api.csproj
@@ -5,6 +5,16 @@
     <ReleaseVersion>2.5</ReleaseVersion>
   </PropertyGroup>
 
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Unit-Test|AnyCPU' ">
+    <DebugType></DebugType>
+    <Optimize>false</Optimize>
+    <OutputPath>bin\Unit-Test</OutputPath>
+    <DefineConstants></DefineConstants>
+    <WarningLevel>4</WarningLevel>
+    <IntermediateOutputPath>obj\Unit-Test</IntermediateOutputPath>
+    <NoWarn></NoWarn>
+    <NoStdLib>false</NoStdLib>
+  </PropertyGroup>
   <ItemGroup>
     <Folder Include="Managers\" />
     <Folder Include="Models\" />
