--- a/ThePage/src/ThePage.UnitTests/ThePage.UnitTests.csproj
+++ b/ThePage/src/ThePage.UnitTests/ThePage.UnitTests.csproj
@@ -5,6 +5,17 @@
 		<IsPackable>false</IsPackable>
 		<ReleaseVersion>2.5</ReleaseVersion>
 	</PropertyGroup>
+	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Unit-Test|AnyCPU' ">
+	  <DebugSymbols>false</DebugSymbols>
+	  <DebugType></DebugType>
+	  <Optimize>false</Optimize>
+	  <OutputPath>bin\Unit-Test</OutputPath>
+	  <DefineConstants></DefineConstants>
+	  <WarningLevel>4</WarningLevel>
+	  <IntermediateOutputPath>obj\Unit-Test</IntermediateOutputPath>
+	  <NoWarn></NoWarn>
+	  <NoStdLib>false</NoStdLib>
+	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
 		<PackageReference Include="xunit" Version="2.4.1" />
