--- a/ThePage/src/ThePage.Api/ThePage.Api.csproj
+++ b/ThePage/src/ThePage.Api/ThePage.Api.csproj
@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
 		<ReleaseVersion>2.5</ReleaseVersion>
+		<Configurations>Unit-Test;Debug;Release</Configurations>
 	</PropertyGroup>
 	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Unit-Test|AnyCPU' ">
 		<DebugType>
@@ -37,8 +38,8 @@
 		<Folder Include="Models\Request\Base\" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-		<PackageReference Include="Refit" Version="6.0.38" />
+		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+		<PackageReference Include="Refit" Version="5.2.4" />
 		<PackageReference Include="MonkeyCache" Version="1.5.2" />
 		<PackageReference Include="MonkeyCache.LiteDB" Version="1.5.2" />
 	</ItemGroup>
