--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -67,12 +67,12 @@ jobs:
       runs-on: macos-latest
       steps:
       - uses: actions/checkout@v1
-      with:
-        dotnet-version: 3.1.403
-        source-url: https://nuget.pkg.github.com/mplaisier/index.json
-      env:
-        NUGET_AUTH_TOKEN: ${{secrets.TOKEN}}
-      - name: Build Unit tests
+        with:
+          dotnet-version: 3.1.403
+          source-url: https://nuget.pkg.github.com/mplaisier/index.json
+        env:
+          NUGET_AUTH_TOKEN: ${{secrets.TOKEN}}
+      - name: Build UnitTests
         run: |
           cd ThePage
           nuget restore
