--- a/ThePage/src/ThePage.Droid/ThePage.Droid.csproj
+++ b/ThePage/src/ThePage.Droid/ThePage.Droid.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Views\BookShelf\BookShelfDetailFragment.cs" />
     <Compile Include="Utils\OnScrollListener.cs" />
     <Compile Include="Views\!Base\BaseListFragment.cs" />
+    <Compile Include="Views\Interfaces\IOnBackPressed.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MvvmCross">
@@ -600,6 +601,7 @@
     <Folder Include="Views\Authentication\" />
     <Folder Include="Views\BookShelf\" />
     <Folder Include="Resources\menu\" />
+    <Folder Include="Views\Interfaces\" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
