--- a/ThePage/src/ThePage.Core/ThePage.Core.csproj
+++ b/ThePage/src/ThePage.Core/ThePage.Core.csproj
@@ -28,6 +28,7 @@
     </PackageReference>
     <PackageReference Include="NodaTime" Version="3.0.5" />
     <PackageReference Include="cbp-extensions" Version="1.7.0" />
+    <PackageReference Include="Google.Apis.Books.v1" Version="1.51.0.2231" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="ViewModels\Author\" />
@@ -51,6 +52,7 @@
     <Folder Include="Utils\MvvmCross\" />
     <Folder Include="ViewModels\BookShelf\" />
     <Folder Include="Cells\BookShelf\" />
+    <Folder Include="Cells\GoogleBook\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ThePage.Api\ThePage.Api.csproj" />
