--- a/ThePage/src/ThePage.Droid/ThePage.Droid.csproj
+++ b/ThePage/src/ThePage.Droid/ThePage.Droid.csproj
@@ -563,6 +563,10 @@
       <SubType></SubType>
       <Generator></Generator>
     </AndroidResource>
+    <AndroidResource Include="Resources\drawable\book_cover.webp">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\values\strings.xml" />
