--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,6 +14,8 @@ jobs:
         source-url: https://nuget.pkg.github.com/mplaisier/index.json
       env:
         NUGET_AUTH_TOKEN: ${{secrets.TOKEN}}
+        private_nuget_pass: ${{secrets.TOKEN}}
+        private_nuget_user: mplaisier
     - name: Build
       run: |
         cd ThePage
@@ -31,6 +33,8 @@ jobs:
         source-url: https://nuget.pkg.github.com/mplaisier/index.json
       env:
         NUGET_AUTH_TOKEN: ${{secrets.TOKEN}}
+        private_nuget_pass: ${{secrets.TOKEN}}
+        private_nuget_user: mplaisier
     - name: Build
       run: |
         cd ThePage
@@ -48,6 +52,8 @@ jobs:
         source-url: https://nuget.pkg.github.com/mplaisier/index.json
       env:
         NUGET_AUTH_TOKEN: ${{secrets.TOKEN}}
+        private_nuget_pass: ${{secrets.TOKEN}}
+        private_nuget_user: mplaisier
     - name: Build
       run: |
         cd ThePage
@@ -65,6 +71,8 @@ jobs:
         source-url: https://nuget.pkg.github.com/mplaisier/index.json
       env:
         NUGET_AUTH_TOKEN: ${{secrets.TOKEN}}
+        private_nuget_pass: ${{secrets.TOKEN}}
+        private_nuget_user: mplaisier
     - name: Build
       run: |
         cd ThePage
@@ -82,6 +90,8 @@ jobs:
         source-url: https://nuget.pkg.github.com/mplaisier/index.json
       env:
         NUGET_AUTH_TOKEN: ${{secrets.TOKEN}}
+        private_nuget_pass: ${{secrets.TOKEN}}
+        private_nuget_user: mplaisier
     - name: Build
       run: |
         cd ThePage
