--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,7 +16,10 @@ jobs:
         NUGET_AUTH_TOKEN: ${{secrets.TOKEN}}
     - name: Build
       run: |
-        echo env.private_nuget_user
+        echo "env.private_nuget_user"
+        echo "$private_nuget_user"
+        echo "%private_nuget_user"
+        echo "%private_nuget_user%"
         cd ThePage
         nuget restore
         msbuild src/ThePage.Api/ThePage.Api.csproj /verbosity:normal /t:Rebuild /p:Configuration=Debug
