--- a/ThePage/Nuget.config
+++ b/ThePage/Nuget.config
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
+    <clear />
     <add key="nuget" value="https://www.nuget.org/api/v2" />
     <add key="MyNuget" value="https://nuget.pkg.github.com/mplaisier/index.json" />
   </packageSources>
