#220 Remove tinymapper and create custom mappings from and to core objects

--- a/ThePage/src/ThePage.Droid/ThePage.Droid.csproj
+++ b/ThePage/src/ThePage.Droid/ThePage.Droid.csproj
@@ -38,6 +38,8 @@
     </AndroidSupportedAbis>
 <EmbedAssembliesIntoApk>true</EmbedAssembliesIntoApk>
 <AndroidLinkSkip>ThePage.Core;ThePage.Api;MvvmCross;MvvmCross.Plugins.Color;MvvmCross.Plugins.Color.Droid;MvvmCross.Plugins.Visibility;MvvmCross.Plugins.Visibility.Droid;MvvmCross.Droid.Support.V7.RecyclerView;MvvmCross.Droid.Support.V7.AppCompat;Newtonsoft.Json;MonkeyCache;MonkeyCache.LiteDB;LiteDB</AndroidLinkSkip>
+<AndroidLinkMode>Full</AndroidLinkMode>
+<AndroidLinkTool>r8</AndroidLinkTool>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>True</DebugSymbols>
