--- a/ThePage/src/ThePage.UnitTests/ThePage.UnitTests.csproj
+++ b/ThePage/src/ThePage.UnitTests/ThePage.UnitTests.csproj
@@ -56,6 +56,7 @@
 		<Folder Include="Services\" />
 		<Folder Include="Services\Book\" />
 		<Folder Include="Services\Book\ScreenManager\" />
+		<Folder Include="Services\TokenService\" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\ThePage.Core\ThePage.Core.csproj" />
